
Bug Fixes
----------------------
* SOLR-3779: DataImportHandler's LineEntityProcessor when used in conjunction 
  with FileListEntityProcessor would only process the first file.
  (Ahmet Arslan via James Dyer)
  
* SOLR-3791: CachedSqlEntityProcessor would throw a NullPointerException when 
  a query returns a row with a NULL key.  (Steffen Moelter via James Dyer)

==================  3.6.1 ==================

Bug Fixes
----------------------
* SOLR-3360: More bug fixes for the deprecated "threads" parameter.  (Mikhail Khludnev, Claudio R, via James Dyer)

* SOLR-3430: Added a new test against a real SQL database.  Fixed problems revealed by this new test
             related to the expanded cache support added to 3.6/SOLR-2382 (James Dyer)

* SOLR-3336: SolrEntityProcessor substitutes most variables at query time.
             (Michael Kroh, Lance Norskog, via Martijn van Groningen)

==================  3.6.0 ==================

New Features
----------------------
* SOLR-1499: Added SolrEntityProcessor that imports data from another Solr core or instance based on a specified query.
             (Lance Norskog, Erik Hatcher, Pulkit Singhal, Ahmet Arslan, Luca Cavanna, Martijn van Groningen)
             Additional Work:
             SOLR-3190: Minor improvements to SolrEntityProcessor. Add more consistency between solr parameters
             and parameters used in SolrEntityProcessor and ability to specify a custom HttpClient instance.
             (Luca Cavanna via Martijn van Groningen)
* SOLR-2382: Added pluggable cache support so that any Entity can be made cache-able by adding the "cacheImpl" parameter.
             Include "SortedMapBackedCache" to provide in-memory caching (as previously this was the only option when
             using CachedSqlEntityProcessor).  Users can provide their own implementations of DIHCache for other
             caching strategies.  Deprecate CachedSqlEntityProcessor in favor of specifing "cacheImpl" with