@@ -17,6 +17,9 @@ Bug Fixes
   
 * SOLR-3791: CachedSqlEntityProcessor would throw a NullPointerException when 
   a query returns a row with a NULL key.  (Steffen Moelter via James Dyer)
+  
+* SOLR-3850: DataImportHandler "cacheKey" parameter was incorrectly renamed "cachePk"
+  (James Dyer)
 
 ==================  3.6.1 ==================
 
